--- a/PC4Customers/PC4Customers.csproj
+++ b/PC4Customers/PC4Customers.csproj
@@ -10,6 +10,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="System.Data.SqlClient" Version="4.8.5" />
+  </ItemGroup>
+
+  <ItemGroup>
     <None Update="Resources\Customers.csv">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
